--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<version>2.5.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.aly8246</groupId>
 	<artifactId>istio-demo</artifactId>
 	<version>${revision}</version>
@@ -18,6 +19,7 @@
 	<modules>
 		<module>common</module>
 		<module>order-api</module>
+		<module>stock-api</module>
 	</modules>
 
 	<properties>
@@ -80,7 +82,13 @@
 			<dependency>
 				<groupId>com.github.xiaoymin</groupId>
 				<artifactId>knife4j-spring-boot-starter</artifactId>
-				<version>2.0.7</version>
+				<version>3.0.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-openfeign</artifactId>
+				<version>3.0.3</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
