--- a/goods-api/pom.xml
+++ b/goods-api/pom.xml
@@ -10,9 +10,8 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>stock-api</artifactId>
+    <artifactId>goods-api</artifactId>
     <version>${revision}</version>
-
 
     <dependencies>
         <dependency>
@@ -26,6 +25,17 @@
         <dependency>
             <groupId>org.springframework.experimental</groupId>
             <artifactId>spring-native</artifactId>
+        </dependency>
+        <!--spring r2dbc数据库依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
+        </dependency>
+
+        <!--r2dbc数据库驱动-->
+        <dependency>
+            <groupId>dev.miku</groupId>
+            <artifactId>r2dbc-mysql</artifactId>
         </dependency>
     </dependencies>
 
@@ -57,5 +67,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
