--- a/order-api/src/main/resources/application-dev.yml
+++ b/order-api/src/main/resources/application-dev.yml
@@ -1,2 +1,9 @@
 server:
   port: 8000
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://120.55.78.23:3306/order?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: 365tskj.dev123456
