--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.aly8246</groupId>
         <artifactId>istio-demo</artifactId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>common</artifactId>
-    <version>${revision}</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
