--- a/goods-api/pom.xml
+++ b/goods-api/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.aly8246</groupId>
         <artifactId>istio-demo</artifactId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>goods-api</artifactId>
-    <version>${revision}</version>
+    <version>1.0.0</version>
 
     <dependencies>
         <dependency>
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>com.aly8246</groupId>
             <artifactId>common</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.experimental</groupId>
@@ -48,10 +49,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.experimental</groupId>
-                <artifactId>spring-aot-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
