--- a/order-api/pom.xml
+++ b/order-api/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>com.aly8246</groupId>
         <artifactId>istio-demo</artifactId>
-        <version>${revision}</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>order-api</artifactId>
-    <version>${revision}</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -22,6 +22,7 @@
         <dependency>
             <groupId>com.aly8246</groupId>
             <artifactId>common</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.experimental</groupId>
@@ -48,10 +49,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.experimental</groupId>
-                <artifactId>spring-aot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
             </plugin>
@@ -61,5 +58,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
