--- a/goods-api/src/main/resources/application-dev.yml
+++ b/goods-api/src/main/resources/application-dev.yml
@@ -1,7 +1,8 @@
 server:
   port: 8001
 spring:
-  r2dbc:
-    url: r2dbc:mysql://120.55.78.23:3306/goods
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://120.55.78.23:3306/goods?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 365tskj.dev123456
