--- a/goods-api/src/main/resources/application.yml
+++ b/goods-api/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
   profiles:
     active: dev
-
+  r2dbc:
+    url: r2dbc:mysql://120.55.78.23:3306/goods
+    username: root
+    password: 365tskj.dev123456
 management:
   endpoints:
     web:
       exposure:
         include: "*"
+  health:
+    probes:
+      enabled: true
