--- a/kubernetes/istio-demo-network.yaml
+++ b/kubernetes/istio-demo-network.yaml
@@ -11,7 +11,7 @@ spec:
         paths:
           - path: /
             backend:
-              serviceName: order-api
+              serviceName: order
               servicePort: 8000
 ---
 #网关
@@ -34,7 +34,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: istio-demo-virualService
+  name: istio-demo-virual-service
   namespace: istio-demo
 spec:
   hosts:
