--- a/stock-api/src/main/resources/application.yml
+++ b/stock-api/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   profiles:
     active: dev
+  redis:
+    host: 120.55.78.23
+    database: 0
+    port: 6379
+    password: 365tskj.dev123456
 
 management:
   endpoints:
@@ -10,3 +15,6 @@ management:
   health:
     probes:
       enabled: true
+
+server:
+  unavailable: ${random.int[5000,6000]}
