--- a/goods-api/src/main/resources/application.yml
+++ b/goods-api/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
   profiles:
     active: dev
-  r2dbc:
-    url: r2dbc:mysql://120.55.78.23:3306/goods
-    username: root
+  redis:
+    host: 120.55.78.23
+    database: 0
+    port: 6379
     password: 365tskj.dev123456
+  cache:
+    type: redis
 management:
   endpoints:
     web:
