--- a/kubernetes/istio-demo-deploy.yaml
+++ b/kubernetes/istio-demo-deploy.yaml
@@ -43,27 +43,27 @@ spec:
     spec:
       serviceAccountName: order-account
       volumes:
-        - name: order-volume
+        - name: order-cm-volume
           configMap:
-            name: order-config
+            name: order-cm
       containers:
         - name: order
           image: registry.cn-hangzhou.aliyuncs.com/istio-java/order-api:1.0.0
           imagePullPolicy: Always
-          args: [" --spring.profiles.active=dev --spring.config.additional-location=/etc/java/ "]
+          args: [" --spring.profiles.active=dev --spring.config.additional-location=/etc/java/*.yml"]
           ports:
             - containerPort: 8000
           securityContext:
             runAsUser: 1000
           volumeMounts:
-            - name: order-volume
+            - name: order-cm-volume
               mountPath: /etc/java/application-dev.yml
               subPath: application-dev.yml
           livenessProbe:
             httpGet:
               path: "/actuator/health/liveness"
               port: 8000
-            initialDelaySeconds: 30
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             successThreshold: 1
@@ -72,7 +72,7 @@ spec:
             httpGet:
               path: "/actuator/health/readiness"
               port: 8000
-            initialDelaySeconds: 30
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             successThreshold: 1
@@ -124,27 +124,27 @@ spec:
     spec:
       serviceAccountName: goods-account
       volumes:
-        - name: goods-volume
+        - name: goods-cm-volume
           configMap:
-            name: goods-config
+            name: goods-cm
       containers:
         - name: goods
           image: registry.cn-hangzhou.aliyuncs.com/istio-java/goods-api:1.0.0
           imagePullPolicy: Always
-          args: [" --spring.profiles.active=dev --spring.config.additional-location=/etc/java/ "]
+          args: [" --spring.profiles.active=dev --spring.config.additional-location=/etc/java/*.yml"]
           ports:
             - containerPort: 8001
           securityContext:
             runAsUser: 1000
           volumeMounts:
-            - name: goods-volume
+            - name: goods-cm-volume
               mountPath: /etc/java/application-dev.yml
               subPath: application-dev.yml
           livenessProbe:
             httpGet:
               path: "/actuator/health/liveness"
               port: 8001
-            initialDelaySeconds: 30
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             successThreshold: 1
@@ -153,7 +153,7 @@ spec:
             httpGet:
               path: "/actuator/health/readiness"
               port: 8001
-            initialDelaySeconds: 30
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             successThreshold: 1
@@ -204,27 +204,27 @@ spec:
     spec:
       serviceAccountName: stock-account
       volumes:
-        - name: stock-volume
+        - name: stock-cm-volume
           configMap:
-            name: stock-config
+            name: stock-cm
       containers:
         - name: stock
           image: registry.cn-hangzhou.aliyuncs.com/istio-java/stock-api:1.0.0
           imagePullPolicy: Always
-          args: [" --spring.profiles.active=dev --spring.config.additional-location=/etc/java/ "]
+          args: [" --spring.profiles.active=dev --spring.config.additional-location=/etc/java/*.yml"]
           ports:
             - containerPort: 8002
           securityContext:
             runAsUser: 1000
           volumeMounts:
-            - name: stock-volume
+            - name: stock-cm-volume
               mountPath: /etc/java/application-dev.yml
               subPath: application-dev.yml
           livenessProbe:
             httpGet:
               path: "/actuator/health/liveness"
               port: 8002
-            initialDelaySeconds: 30
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             successThreshold: 1
@@ -233,7 +233,7 @@ spec:
             httpGet:
               path: "/actuator/health/readiness"
               port: 8002
-            initialDelaySeconds: 30
+            initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
             successThreshold: 1
