--- a/goods-api/src/main/resources/application.yml
+++ b/goods-api/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   profiles:
     active: dev
+  application:
+    name: goods-api
   redis:
     host: 120.55.78.23
     database: 0
@@ -13,6 +15,20 @@ management:
     web:
       exposure:
         include: "*"
+        exclude:
+          - env
+          - beans
+    health:
+      show-details: always
+  metrics:
+    tags:
+      application: ${spring.application.name}
+    export:
+      prometheus:
+        enabled: true
+      jmx:
+        enabled: true
   health:
     probes:
       enabled: true
+
