--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 			<artifactId>knife4j-spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
