--- a/common/pom.xml
+++ b/common/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
+        </dependency>
     </dependencies>
 
 
