--- a/goods-api/src/main/resources/application-dev.yml
+++ b/goods-api/src/main/resources/application-dev.yml
@@ -1,8 +1,13 @@
-server:
-  port: 8001
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://120.55.78.23:3306/goods?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 365tskj.dev123456
+  redis:
+    host: 120.55.78.23
+    database: 0
+    port: 6379
+    password: 365tskj.dev123456
+  cache:
+    type: redis
