--- a/order-api/src/main/resources/application.yml
+++ b/order-api/src/main/resources/application.yml
@@ -1,30 +1,7 @@
+server:
+  port: 8000
 spring:
   profiles:
-    active: dev
+    active: dev,actuator
   application:
     name: order-api
-
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-        exclude:
-          - env
-          - beans
-    health:
-      show-details: always
-  metrics:
-    tags:
-      application: ${spring.application.name}
-    export:
-      prometheus:
-        enabled: true
-      jmx:
-        enabled: true
-  health:
-    probes:
-      enabled: true
-
-
