--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,15 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-jmx</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jolokia</groupId>
+			<artifactId>jolokia-core</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -167,6 +176,7 @@
 				<filtering>false</filtering>
 				<includes>
 					<include>*.yml</include>
+					<include>**/application-actuator.yml</include>
 				</includes>
 			</resource>
 		</resources>
