--- a/stock-api/src/main/resources/application-dev.yml
+++ b/stock-api/src/main/resources/application-dev.yml
@@ -1,2 +1,8 @@
-server:
-  port: 8002
+spring:
+  redis:
+    host: 120.55.78.23
+    database: 0
+    port: 6379
+    password: 365tskj.dev123456
+  cache:
+    type: redis
