--- a/stock-api/src/main/resources/application.yml
+++ b/stock-api/src/main/resources/application.yml
@@ -1,32 +1,7 @@
+server:
+  port: 8002
 spring:
   profiles:
-    active: dev
-  redis:
-    host: 120.55.78.23
-    database: 0
-    port: 6379
-    password: 365tskj.dev123456
+    active: dev,actuator
   application:
     name: stock-api
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-        exclude:
-          - env
-          - beans
-    health:
-      show-details: always
-  metrics:
-    tags:
-      application: ${spring.application.name}
-    export:
-      prometheus:
-        enabled: true
-      jmx:
-        enabled: true
-  health:
-    probes:
-      enabled: true
